# DeepRoc

./: .gitignore  README.md  pyproject.toml
examples/simple_lab/: deeproc.json  message.txt  program.md  proposal.json  score.py
src/deeproc/: __init__.py  core.py
tests/: test_deeproc.py
