[project]
name = "deeproc"
version = "0.1.0"
description = "A tiny agent experimentation loop inspired by karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
